--- a/starter/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.udacity.shoestore.ShoeDetailFragment">
+    tools:context=".ShoeDetailFragment">
 
     <data>
 
@@ -12,89 +14,84 @@
 
         <variable
             name="ShoeListViewModel"
-            type="com.udacity.shoestore.models.ShoeListViewModel" />
+            type="com.udacity.shoestore.ShoeListViewModel" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
         android:orientation="vertical"
-        tools:context=".ShoeDetailFragment">
-
-
-    <TextView
-        android:id="@+id/shoe_name_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/shoe_name_label"
-        android:labelFor="@+id/shoe_name_input"
-        />
-
-    <EditText
-        android:id="@+id/shoe_name_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:autofillHints="shoeName"
-        />
-
-    <TextView
-        android:id="@+id/company_name_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/company_name_label" />
-
-    <EditText
-        android:id="@+id/company_name_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:autofillHints="companyName"
-        />
-    <TextView
-        android:id="@+id/shoe_size_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/shoe_size_label" />
-
-    <EditText
-        android:id="@+id/shoe_size_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number|numberDecimal"
-        android:autofillHints="shoeSize"
-        />
-
-    <TextView
-        android:id="@+id/description_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/description_label" />
-
-    <EditText
-        android:id="@+id/description_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:autofillHints="description"
+        android:gravity="center_vertical"
         >
-</EditText>
-    <Button
-        android:id="@+id/save_shoe_detail_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="@{(view) -> ShoeListViewModel.onSave(view, shoe)}"
-        android:text="@string/save_shoe_detail_button_label" />
 
-    <Button
-        android:id="@+id/cancel_shoe_detail_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/cancel_shoe_detail_button_label" />
-</LinearLayout>
+
+        <TextView
+            android:id="@+id/shoe_name_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:labelFor="@+id/shoe_name_input"
+            android:text="@string/shoe_name_label" />
+
+        <EditText
+            android:id="@+id/shoe_name_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="shoeName"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/company_name_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/company_name_label" />
+
+        <EditText
+            android:id="@+id/company_name_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="companyName"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/shoe_size_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/shoe_size_label" />
+
+        <EditText
+            android:id="@+id/shoe_size_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="shoeSize"
+            android:ems="10"
+            android:inputType="number|numberDecimal" />
+
+        <TextView
+            android:id="@+id/description_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/description_label" />
+
+        <EditText
+            android:id="@+id/description_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="description"
+            android:inputType="textPersonName"></EditText>
+
+        <Button
+            android:id="@+id/save_shoe_detail_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{(view) -> ShoeListViewModel.createShoe(view, Shoe)}"
+            android:text="@string/save_shoe_detail_button_label" />
+
+        <Button
+            android:id="@+id/cancel_shoe_detail_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel_shoe_detail_button_label" />
+    </LinearLayout>
 
 
 </layout>
